@@ -1,0 +1,3 @@
+Site URL: https://www.naughtyblog.org/
+Contact: https://www.naughtyblog.org/contact/
+DMCA: https://www.naughtyblog.org/dmca/
