@@ -2,8 +2,9 @@
 Freeomovie Category directory fix
 Hanime.tv - Also play the mp4 videos (needs a free member account)
 awmnetwork - 35 new sites
-JustFullPorn - new sites
+JustFullPorn - new site
 JavHoho - fix listing
 Blendporn - fix pagination
 YrPrno - fix pagination
 JavBangers - Lookup info
+Naughtyblog - new site
